# netbox-field-permissions

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
changelog/: index.html
development/: Dockerfile
development/configuration/: plugins.py
netbox_field_permissions/: __init__.py  constants.py  forms.py  models.py  navigation.py  tables.py  urls.py  utilities.py  validators.py  views.py
netbox_field_permissions/migrations/: 0001_initial.py
netbox_field_permissions/templates/netbox_field_permissions/: fieldpermission.html  fieldpermission_edit.html  fieldpermission_list.html  manage.html
search/: search_index.json
